# asip_epp

./: README.md
lars/bauer_l/ASIPMeisterProjects/: Ausprobieren.txt  C++Informations.txt  FehlerMeldung.txt  ResetPCU.txt  convertToBinary.c  extend_fhm.txt  xilinxcorelib_benutzen.txt
lars/bauer_l/ASIPMeisterProjects/ASIPmeister/: ReleaseNotes.txt
lars/bauer_l/ASIPMeisterProjects/ASIPmeister/etc/: entry.setup.sh  fhm.setup.sh  formula.txt
lars/bauer_l/ASIPMeisterProjects/ASIPmeister/info/: pas.info
lars/bauer_l/ASIPMeisterProjects/ASIPmeister/lib/: libfhmapi.so.1.3  libstdc++-libc6.2-2.so.3
lars/bauer_l/ASIPMeisterProjects/CoSy_Compiler/: CoSyOptionen.txt  CoSy_dev.txt  CompilerTest.xls  ManuellNoetigePatches.txt  basisSinasDevcc.edl  basisSinasDevcc.edl.diff  basisSinasOptcc.edl  basisSinasOptcc.edl.diff  basisSinascc.edl  basisSinascc.edl.diff  basiscc.edl  basiscc.edl.diff  compiler.txt  control.cgd
lars/bauer_l/ASIPMeisterProjects/CoSy_Compiler/01_basisOhneSinasMitOpt/: basisSinasDev.edl  blowfish_O0.dlxsim  blowfish_O3.dlxsim
lars/bauer_l/ASIPMeisterProjects/CoSy_Compiler/02_basisOptMitSinasFrontend/: basisSinasDevcc.edl  blowfish_O4.dlxsim
lars/bauer_l/ASIPMeisterProjects/CoSy_Compiler/03_basisOptMitSinasLowFlowUndBUG/: basisSinasDevcc.edl  basisSinasDevcg.edl  blowfish_O1.dlxsim
lars/bauer_l/ASIPMeisterProjects/CoSy_Compiler/04_basisMitSinasOhneOpt/: basisSinascc.edl  basisSinascc_BACKUP.edl  basisSinascg.edl
lars/bauer_l/ASIPMeisterProjects/CoSy_Compiler/05_basisSinasOpt/: basisSinasDevcc.edl
lars/bauer_l/ASIPMeisterProjects/CoSy_Compiler/06_basisSinasOpt_final/: basisSinasOptcc.edl
lars/bauer_l/ASIPMeisterProjects/CoSy_Compiler/SRA_Manuell/: arith.cgd  arith.cgd_BACKUP  arith.diff
lars/bauer_l/ASIPMeisterProjects/Xilinx/XilinxCoreLib/: async_fifo_v4_0.vhd  async_fifo_v4_0_comp.vhd  async_fifo_v5_0.vhd  async_fifo_v5_0_comp.vhd  async_fifo_v5_1.vhd  async_fifo_v5_1_comp.vhd  blkmemdp_mem_init_file_pack_v5_0.vhd  blkmemdp_mem_init_file_pack_v6_0.vhd  blkmemdp_mem_init_file_pack_v6_1.vhd  blkmemdp_pkg_v3_0.vhd  blkmemdp_pkg_v3_2.vhd  blkmemdp_pkg_v4_0.vhd  blkmemdp_pkg_v5_0.vhd  blkmemdp_pkg_v6_0.vhd  blkmemdp_pkg_v6_1.vhd  blkmemdp_v3_0.vhd  blkmemdp_v3_0_comp.vhd  blkmemdp_v3_2.vhd  blkmemdp_v3_2_comp.vhd  blkmemdp_v4_0.vhd  blkmemdp_v4_0_comp.vhd  blkmemdp_v4_0_services.vhd  blkmemdp_v5_0.vhd  blkmemdp_v5_0_comp.vhd  blkmemdp_v5_0_services.vhd  blkmemdp_v6_0.vhd  blkmemdp_v6_0_comp.vhd  blkmemdp_v6_0_services.vhd  blkmemdp_v6_1.vhd  blkmemdp_v6_1_comp.vhd  blkmemdp_v6_1_services.vhd  blkmemsp_pkg_v3_0.vhd  blkmemsp_pkg_v3_2.vhd  blkmemsp_pkg_v4_0.vhd  blkmemsp_pkg_v5_0.vhd  blkmemsp_pkg_v6_0.vhd  blkmemsp_pkg_v6_1.vhd  blkmemsp_v3_0.vhd  blkmemsp_v3_0_comp.vhd  blkmemsp_v3_2.vhd  (+461 more)
lars/bauer_l/ASIPMeisterProjects/Xilinx/unisims/: unisim_SMODEL.vhd  unisim_VCOMP.vhd  unisim_VPKG.vhd
lars/bauer_l/ASIPMeisterProjects/dlx_Praktikum/: env_settings
lars/bauer_l/ASIPMeisterProjects/dlx_Praktikum/Applications/: dlxsim  mkall  mkimg  mkimg_fromS  mkimg_fromS_remotePAS  mkimg_fromS_remotePas  mkimg_remotePas  powest
lars/bauer_l/ASIPMeisterProjects/dlx_Praktikum/meister/: dlx_LaboratoryWithoutAdd.arc  dlx_LaboratoryWithoutAdd.des  dlx_LaboratoryWithoutAdd.ppd  dlx_LaboratoryWithoutAdd.tr  dlx_basis.mod  dlx_basis.ppd  dlx_basis.tr  meisterlog.txt
lars/bauer_l/ASIPMeisterProjects/dlx_basis/: AssemblerInstructions.inc  AssemblerInstructions_Backup.inc  AssemblerInstructions_BackupDirk.inc  AssemblerInstructions_BackupDummyOps.inc  AssemblerTypes_Backup.inc  AssemblerTypes_BackupDirk.inc  basisSinasDevcc.txt  dlx_basis.pdb_BACKUP  dlx_basis.pdb_BACKUP_LATEST  dlx_basis.pdb_NEU  env_settings
lars/bauer_l/ASIPMeisterProjects/dlx_basis/Applications/: dlxsim  initMem  jal_test.graphml  mkRotApp  mkall  mkallNOP  mkimg  mkimg_fromS  mkimg_fromS_remotePas  mkimg_remotePas  new_profile1.graphml  new_profile2.graphml  new_profile3.graphml  powest
lars/bauer_l/ASIPMeisterProjects/dlx_test/: env_settings
lars/bauer_l/TEMPLATE_PROJECT/: env_settings
lars/epp/: asipmeister.setup
lars/epp/ASIPmeister/: InstallGuide.txt  LICENSE
lars/epp/ASIPmeister/etc/: .ASIPmeister.ini  asipmeister_epp.setup  estimate.setup.sh
lars/epp/ASIPmeister/lib/: libstdc++-2.96-98.i386.rpm
lars/epp/ASIPmeister/share/: ASIPmeister.setup.sample
lars/epp/CoSy/: continue_cosy.sh  cosy.sh  cosyATi80pc06_Environment.sh.template  cosyATi80pc06_Environment.sh.template.bac  cosyATi80pc06_MKC.sh  cosyATi80pc06_PreMKC.sh  test-cosy-1.sh  test-cosy-2.sh  test-cosy.sh
lars/epp/CoSy/i80pc06_scripts/: buildcompiler  cosy_pre_i80pc06.sh  cosy_remote_cont.sh_OLD  cosy_remote_mkc.sh  cosy_remote_premkc.sh~  cosy_remote_premkc_develop.sh  cpcgd  cpcgd_abs  cpcgd_i80pc06  extractcc  extractcc_abs  extractcc_i80pc06  extractcc_i80pc06_sinas  i80pc06_after_meistercg.sh
lars/epp/StdLib/: lib_lcd_240.c  lib_lcd_320.c
lars/epp/SunJava2-1.3.1/jdk1.3.1_12/: README.html
lars/epp/dlxsim/: asm.c  dlx.h  dlxsim  sim.c
lars/epp/dlxsim_Laboratory/: asm.c  dlx.h  dlxsim  sim.c
lars/epp/mkimg/: addNopAfterLabels.pl~  assemble.sh~  compile.sh~  exit_dlx.s~  reduceNOPs.pl  startup_dlx.s
sajjad/Sessions/Session0/: WS20_PraktikumsVorbesprechungRev1.pptx
sajjad/Sessions/Session5/: loop_modified.c
sajjad/epp/AM_tools/: Makefile.APDEV
sajjad/epp/AM_tools/binutils-2.16.1/: config.sub
sajjad/epp/AM_tools/gcc-4.2.2/: config.sub  configure
sajjad/epp/AM_tools/gdb-6.4/: config-ml.in  config.guess  config.sub  configure  configure.in
sajjad/epp/AM_tools/gdb-6.4/sim/brownie32/: Makefile.in  brownie32.dc  brownie32.igen  brownie323264r2.igen  brownie323d.igen  config.in  configure  configure.ac  cp1.c  interp.c  m16.igen  m16e.igen  mdmx.c  sim-main.c  sim-main.h
sajjad/epp/AM_tools/newlib-1.14.0/: ChangeLog  Makefile.in  Makefile.tpl  config-ml.in  config.sub  configure  configure.in  configure.orig
sajjad/epp/TEMPLATE_PROJECT/: env_settings
sajjad/epp/dlxsimbr/: asm.c  dlxsim  sim.c
sajjad/epp/dlxsimbr_Laboratory/: dlxsim  sim.c
sajjad/epp/mkimg/: Makefile  assemble-test.sh
(+6673 files in other folders)
